event detail page og addea andpopup edited

--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -2478,7 +2478,8 @@ ul {
     height: 100vh !important;
 }
 .popup-img {
-    height: 85vh !important;
+    height: 100% !important;
+    overflow: auto;
     width: 100%;
 }
 .modal-headerpopup {
